syntax = "proto3";
package pbBaseAPIClient;
option go_package = ".;pbBaseAPIClient";

service BaseAPIClient {
    rpc CreateClient(CreateMessageReq) returns(CreateMessageResp);

}

message CreateMessageReq {
    string secretKey = 1;
    int32 clientType = 2;
}

message CreateMessageResp {
    uint32 ClientID=1;
    string ClientUUID=2;
}
