syntax = "proto3";
package pbMsgGateway;
option go_package = ".;pbMsgGateway";

service MsgGateway {
    rpc ReceiveMessage(MessageReq) returns(MessageResp);
    rpc ReceiveClientMsg(ClientMsgReq) returns(MessageResp);
    rpc ReceiveSingleMsg(SingleMsgReq) returns(SingleMsgResp);
}

message MessageResp {
    int32   errCode = 1;
    string  errMsg = 2;
}

message MessageReq {
    string type = 1;
    string message = 2;
}

message ClientMsgReq {
    int64 sendID = 1;
    int64 receID = 2;
    string content = 3;
}

message ClientMsgResp {
    int32 errCode = 1;
    string errMsg = 2;
}

message SingleMsgReq {
    uint64 sendID = 1;
    uint64 recvID = 2;
    uint32 msgType = 3;
    string content = 4;

}

message SingleMsgResp {
    uint32 code = 1;
    string message = 2;
}